<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Traffic Jammeu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="fermer">Fermer</string>
    <string name="rafraichir">Rafraichir</string>
    <string name="listMode">Mode Liste</string>
     <string name="infos">Informations</string>
    <string name="changeMapType">Changer de carte</string>
    <string name="doNotShowAgain">Ne plus afficher cette page</string>
	<string name="mapTypeNormal">Vue Plan</string>
	<string name="mapTypeSatellite">Vue Satellite</string>
	<string name="mapTypeHybrid">Vue Hybride</string>
	<string name="mapTypeStreet">Vue Terrain</string>
	<string name="minZoomForMarking">Vous devez zoomer encore </string>
	<string name="username">Nom d\'utilisateur</string>
	<string name="name">Nom complet</string>
	<string name="email">Adresse email</string>
	<string name="loading">Patientez ...</string>
	<string name="save">Enregistrer</string>
	<string name="title">Infos utilisateur</string>
	<string name="ccm">Comment ça marche ?</string> 
	<string name="alertDescTitle">Description</string>
	<string name="alertMessageHint">Decrivez un peu le traffic !</string>
	<string name="tuto">
	    Vous devez poser deux marqueurs pour dessiner une route \n
	    1. Faites un appui long sur la carte pour poser un premier marquer \n
	    2. Repetez l\'appui long pour déposer un deuxième marquer \n
	    3. Entrez les informations demandées \n
	    4. Pour supprimer un marqueur, faites un appui long sur le marqueur et le déposer sur la corbeille
	</string>
</resources>