<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    
    
    <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ccm"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:textSize="@dimen/titleSize"
	    android:id="@+id/tutoTitle"
	    android:layout_centerHorizontal="true"
	    android:textColor="@android:color/white"
	    android:textStyle="bold"
	    
        />
    
    <ScrollView 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/tutoTitle" 
	    android:layout_centerHorizontal="true">
    	
        <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/secondary_text_light"
		    android:text="ICI ON METTRA NOTRE PAGE DE TUTO"
            />
    	
    </ScrollView>
    
    <Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/fermer"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:id="@+id/closeButton"
        />
    
    <CheckBox 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:checked="true"
	    android:id="@+id/doNotShowAgain"
	    android:layout_above="@id/closeButton"
	    android:text="@string/doNotShowAgain"
	    android:textColor="@android:color/white"
	    android:layout_centerHorizontal="true"
        />
</RelativeLayout>